--- a/css/style.css
+++ b/css/style.css
@@ -362,6 +362,9 @@ img {
   z-index: 1;
 
   background-color: rgba(0, 0, 0, 0.2);
+
+  opacity: 1;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop--hiden {
@@ -375,12 +378,22 @@ img {
   left: 50%;
   min-width: 528px;
   min-height: 500px;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) scale(1);
 
   background: #ffffff;
   border-radius: 4px;
   box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 1px 3px rgba(0, 0, 0, 0.12);
+
+  opacity: 1;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop--hiden .modal {
+  transform: translate(-50%, -50%) scale(1.1);
+
+  opacity: 0;
 }
 
 /* Sections css options*/
