--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ img {
 
 /* delete underline from the link */
 .logo--no-link,
-.vrt-button--no-link,
+.button--no-link,
 .address__email--no-link,
 .address__tel--no-link,
 .menu__link--no-link,
@@ -95,7 +95,8 @@ img {
 
 /* hide the item */
 .portfolio__title--hiden,
-.feature__title--hiden {
+.feature__title--hiden,
+.checkbox--hiden {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -115,7 +116,7 @@ img {
 }
 
 /* Virtual button css options*/
-.vrt-button {
+.button {
   display: inline-flex;
   min-width: 200px;
   height: 50px;
@@ -130,6 +131,16 @@ img {
   text-align: center;
 
   background-color: var(--bgc-button);
+}
+
+/* Hero button */
+.hero__btn {
+  border-style: none;
+}
+
+.submit__btn {
+  border-style: none;
+  justify-content: center;
 }
 
 /* Footer button */
@@ -374,10 +385,11 @@ img {
 
 .modal {
   position: absolute;
+  padding: 40px;
   top: 50%;
   left: 50%;
   min-width: 528px;
-  min-height: 500px;
+  /* min-height: 500px; */
   transform: translate(-50%, -50%) scale(1);
 
   background: #ffffff;
@@ -390,10 +402,171 @@ img {
     opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.modal__close-btn {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  top: 0;
+  right: 0;
+  transform: translate(30%, -30%);
+
+  border-radius: 50%;
+  border-style: none;
+  background-color: var(--bgc-primary);
+  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 1px 3px rgba(0, 0, 0, 0.12);
+}
+
 .backdrop--hiden .modal {
   transform: translate(-50%, -50%) scale(1.1);
 
   opacity: 0;
+}
+
+/* Forms */
+.form__field {
+  display: block;
+  position: relative;
+}
+
+.form__field:not(:nth-last-of-type(-n + 2)) {
+  margin-bottom: 28px;
+}
+
+.form__field:nth-last-of-type(2) {
+  margin-bottom: 20px;
+}
+
+.form__field:nth-last-of-type(1) {
+  margin-bottom: 30px;
+}
+
+input {
+  display: block;
+  width: 100%;
+  padding: 12px 12px 12px 42px;
+
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.01em;
+
+  color: var(--font-primary-color);
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+
+input:focus {
+  border: 1px solid #2196f3;
+}
+
+.form__field > input:focus ~ .form__icon {
+  fill: var(--font-active-element);
+}
+
+.form__field > input:focus ~ .form__field-title {
+  transform: translate(-25px, -20px);
+
+  color: var(--font-active-element);
+}
+
+.form__input:not(:placeholder-shown) ~ .form__field-title {
+  transform: translate(-25px, -20px);
+}
+
+textarea {
+  display: block;
+  resize: none;
+  width: 100%;
+  padding: 12px 16px;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  box-sizing: border-box;
+  border-radius: 4px;
+}
+
+textarea:focus {
+  border: 1px solid #2196f3;
+}
+
+textarea:focus ~ .form__field-title {
+  transform: translate(0px, -20px);
+
+  color: var(--font-active-element);
+}
+
+textarea:not(:placeholder-shown) ~ .form__field-title {
+  transform: translate(0px, -20px);
+}
+
+.modal__title {
+  padding-bottom: 30px;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.15;
+
+  text-align: center;
+  color: var(--font-secondary-color);
+}
+
+.form__field-title {
+  position: absolute;
+  top: 0;
+  left: 42px;
+  transform: translateY(95%);
+
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.01em;
+
+  color: var(--font-primary-color);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form__field-title--no-image {
+  left: 18px;
+}
+
+.form__icon {
+  position: absolute;
+  width: 18px;
+  height: 18px;
+  top: 0;
+  left: 16px;
+  transform: translateY(70%);
+}
+
+.form__field.policy {
+  display: flex;
+  align-items: center;
+}
+
+.form__field.policy > a {
+  display: contents;
+}
+
+.checkbox__icon {
+  display: inline-flex;
+  margin-right: 9px;
+  width: 15px;
+  height: 15px;
+
+  border: 2px solid var(--font-secondary-color);
+  border-radius: 2px;
+}
+
+.checkbox:checked ~ .checkbox__icon {
+  display: inline-flex;
+  margin-right: 9px;
+  width: 15px;
+  height: 15px;
+
+  border: 2px solid var(--font-active-element);
+  border-radius: 2px;
+  background-origin: content-box;
+  background-color: var(--font-active-element);
+  background-image: url(../img/icon-checked.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 
 /* Sections css options*/
@@ -690,17 +863,18 @@ img {
 
 .join__conteiner {
   display: inline-flex;
+  align-items: center;
 }
 
 .join__email {
   margin-right: 12px;
-  padding: 0px 12px;
+  padding: 15px 16px;
   width: 358px;
 
   color: var(--font-ftr-contact);
   background-color: var(--bgc-footer);
   font-size: 16px;
-  line-height: 1.87;
+  line-height: 1.25;
 
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
